Fixed action alerts display bug with whitespace

--- a/src/App.scss
+++ b/src/App.scss
@@ -56,11 +56,6 @@ body {
   border-color: $pd-brand-secondary-light !important;
 }
 
-.modal-content {
-  // TODO: Fix white-div from showing up
-  // background-color: $pd-brand-secondary-light !important;
-}
-
 .modal-footer {
   display: unset !important;
 }
